2011-09-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/50464
	* config/i386/sse.md (xop_pcmov_<mode><avxsizesuffix>): Change
	operand 1 predicate to register_operand and operand 2 predicate
	to nonimmediate_operand.
	* config/i386/i386.c (ix86_expand_sse_movcc): When generating
	xop_pcmov, force op_true to register.  Also, force op_false to
	register if it doesn't satisfy nonimmediate_operand predicate.

2011-09-21  Kirill Yukhin  <kirill.yukhin@intel.com>

	* config/i386/bmi2intrin.h (_mulx_u64): New.
	(_mulx_u32): Ditto.

2011-09-21  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/50433
	* ipa-inline-analysis.c (eliminated_by_inlining_prob):
	Use get_base_address.

2011-09-21  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (<code><mode>3 smaxmin:VI124_128 expander): Use
	nonimmediate_operand instead of register_operand predicate for operands
	1 and 2, force them into registers if expanding them as comparison.
	(<code><mode>3 umaxmin:VI124_128 expander): Similarly.  For UMAX
	V8HImode force into register just operand 1.

2011-09-21  Georg-Johann Lay  <avr@gjlay.de>

	PR target/45099
	* config/avr/avr.c (avr_function_arg_advance): Change error to
	warning if a fixed register is needed as function argument.

2011-09-21  Georg-Johann Lay  <avr@gjlay.de>

	PR target/50449
	PR target/50465
	* config/avr/avr.md (adjust_len): New insn attribute.
	(*reload_insi, *reload_insf): Use it.
	(*movsi, *movsf): Use new interface of output_movsisf.
	* config/avr/avr-protos.h (output_movsisf): Change prototype.
	* config/avr/avr.c (output_movsisf): Ditto.
	(adjust_insn_length): Use insn attribute "adjust_len" to adjust
	lengths of insns *reload_insi, *reload_insf.
	(output_reload_insisf_1): New static function.
	(output_reload_insisf): Use it.

2011-09-21  David S. Miller  <davem@davemloft.net>

	* config/sparc/sparc.c (def_builtin): Change from macro into function.
	(def_builtin_const): New.
	(sparc_vis_init_builtins): Use def_builtin_const for all VIS builtins