@@ -1,3 +1,9 @@
+2011-09-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/vect/vect-cond-7.c: New test.
+	* gcc.target/i386/sse4_1-cond-1.c: New test.
+	* gcc.target/i386/avx-cond-1.c: New test.
+
 2011-09-21  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/50464
