@@ -1,3 +1,8 @@
+2011-09-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (ix86_expand_sse_movcc): Use
+	blendvps, blendvpd and pblendvb if possible.
+
 2011-09-21  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/50464
